# carve

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  gh-release.yml  publish.yml
editres/: Cargo.toml
editres/src/: injectee.rs  lib.rs  names.rs
editres/src/injector/: inject.rs  list.rs  mod.rs
editres_cli/: Cargo.toml
editres_cli/src/: lib.rs  main.rs
editres_cli/tests/: tests.rs
postject_sys/: Cargo.toml  build.rs
postject_sys/cmake/: CMakeLists.txt
postject_sys/cmake/src/: postjector.cpp  postjector.h
postject_sys/src/: bindgen.rs  dummy_win_res.rc  lib.rs  postjectee.c  postjectee.h  postjectee.rs  postjector.rs
scripts/: ci_build_cli.py  license.py
testbin/: Cargo.toml
testbin/src/: lib.rs
