[package]
name = "editres"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/branchseer/editres"
repository = "https://github.com/branchseer/editres"
license = "MPL-2.0"
description = "`include_bytes!` after build"
authors = ["branchseer <dk4rest@gmail.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["injectee"]
injectee = ["postject_sys/injectee", "const_format"]
injector = ["postject_sys/injector", "anyhow", "apple-codesign"]

[dependencies]
postject_sys = { path = "../postject_sys", version = "0.1" }
const_format = { version = "0.2.32", optional = true }
anyhow = { version = "1", optional = true }

# 0.25+ can't compile with default-features off. TODO: submit a fix PR
apple-codesign = { version = "0.24", default-features = false, optional = true }
