[package]
name = "editres"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/branchseer/editres"
repository = "https://github.com/branchseer/editres"
license = "MPL-2.0"
description = "Embed data into executables after build"
authors = ["branchseer <dk4rest@gmail.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["injectee"]
injectee = ["postject_sys/injectee", "const_format"]
injector = ["postject_sys/injector", "anyhow", "apple-codesign"]

[dependencies]
postject_sys = { path = "../postject_sys", version = "0.1" }
const_format = { version = "0.2.32", optional = true }
anyhow = { version = "1", optional = true }
apple-codesign = { version = "0.27", default-features = false, optional = true }
