[package]
name = "editres_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editres"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
editres = { path = "../editres", version = "0.1", default-features = false, features = [
    "injector",
] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.9"
fastrand = "2.0.1"
bincode = "1"
