[package]
name = "editres_cli"
version = "0.1.3"
edition = "2021"
description = "Command line tool for injecting data into executables that use editres"
license = "MPL-2.0"
authors = ["branchseer <dk4rest@gmail.com>"]
homepage = "https://github.com/branchseer/editres"
repository = "https://github.com/branchseer/editres"

[[bin]]
name = "editres"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
editres = { path = "../editres", version = "0.1", default-features = false, features = [
    "injector",
] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.9"
fastrand = "2.0.1"
bincode = "1"
