[package]
name = "postject_sys"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Unofficial bindings for postject"
authors = ["branchseer <dk4rest@gmail.com>"]
homepage = "https://github.com/branchseer/editres"
repository = "https://github.com/branchseer/editres"
exclude = [
    "cmake/postject/vendor/lief/doc",
    "cmake/postject/vendor/lief/third-party",
]

[features]
injector = ["cmake", "bindgen", "link-cplusplus"]
injectee = ["cc", "bindgen"]

[build-dependencies]
cmake = { version = "0.1.50", optional = true }
cc = { version = "1.0.83", optional = true }
bindgen = { version = "0.69.1", optional = true }

[dependencies]
link-cplusplus = { version = "1.0", optional = true }
