[package]
name = "postject_sys"
version = "0.1.5"
edition = "2021"
license = "MPL-2.0"
description = "Unofficial bindings for postject"
authors = ["branchseer <dk4rest@gmail.com>"]
homepage = "https://github.com/branchseer/editres"
repository = "https://github.com/branchseer/editres"
exclude = [
    "cmake/postject/vendor/lief/doc"
]

[features]
injector = ["cmake", "link-cplusplus"]
injectee = ["cc", "embed-resource"]

[build-dependencies]
cmake = { version = "0.1.50", optional = true }
cc = { version = "1.0.83", optional = true }
# https://github.com/rust-lang/cargo/issues/4932
embed-resource = { version = "2.4.1", optional = true }

[dependencies]
link-cplusplus = { version = "1.0", optional = true }

[dev-dependencies]
bindgen = { version = "0.69.2" }
pretty_assertions = "1.4.0"

